--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -12,3 +12,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.limitCharacter {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 250px;
+}
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+}
